# Todo-web-app

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile.backend  docker-compose.yml  railway.json  start-all.bat  start.sh  todo_cli.py
.github/: README.md
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml  full-ci.yml
specs/phase 01/: cli.md
specs/phase 02/: webapp.md
specs/phase 03/: ai-chatbot.md
src/backend/: .dockerignore  .env.example  .env.production  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt  start.bat  start.sh
src/backend/app/: __init__.py  deps.py  main.py
src/backend/app/api/v1/: router.py
src/backend/app/api/v1/routes/: auth.py  health.py  tasks.py
src/backend/app/core/: config.py  security.py
src/backend/app/crud/: task.py  user.py
src/backend/app/db/: base.py  session.py
src/backend/app/models/: __init__.py  task.py  user.py
src/backend/app/schemas/: task.py  token.py  user.py
src/backend/tests/: conftest.py  test_auth.py  test_tasks.py
src/frontend/: .dockerignore  .env.production  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  start.bat  tailwind.config.ts  tsconfig.json
src/frontend/src/app/: globals.css  layout.tsx  page.tsx
src/frontend/src/app/dashboard/: page.tsx
src/frontend/src/app/login/: page.tsx
src/frontend/src/app/logout/: page.tsx
src/frontend/src/components/: auth-form.tsx  task-form.tsx  task-list.tsx  theme-provider.tsx  whatsapp-button.tsx
src/frontend/src/lib/: api-client.ts  auth.ts  types.ts
(+2 files in other folders)
